--- a/FRange/FRange.fsproj
+++ b/FRange/FRange.fsproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Library.fs" />
+    <Compile Include="Range.fs" />
   </ItemGroup>
 
 </Project>
