Began work on C# support.

--- a/FRange/FRange.fsproj
+++ b/FRange/FRange.fsproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Compile Include="Bound.fs" />
     <Compile Include="Range.fs" />
+    <Compile Include="CSharp.fs" />
   </ItemGroup>
 
 </Project>
