--- a/FRange/FRange.fsproj
+++ b/FRange/FRange.fsproj
@@ -1,16 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <WarnOn>3390;$(WarnOn)</WarnOn>
     <Authors>Brian Berns</Authors>
+	<Description>A .NET library for working with ranges of values</Description>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/brianberns/FRange</PackageProjectUrl>
     <RepositoryUrl>https://github.com/brianberns/FRange</RepositoryUrl>
     <PackageIcon>ledfoot.png</PackageIcon>
     <PackageTags>range</PackageTags>
-    <Version>1.0.1</Version>
+    <Version>1.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
